Fix small devices layout issues, adds article instead of div when is needed, add alt atributes to images

--- a/styles.css
+++ b/styles.css
@@ -231,12 +231,12 @@ html {
   text-align: center;
 }
 
-.footer {
+.partners {
   background-color: var(--black);
   padding: 2rem;
 }
 
-.footer__logo-container {
+.partners__logo-container {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -261,11 +261,11 @@ html {
   justify-content: center;
   gap: 2rem;
   align-items: center;
-  padding: 2rem 0;
+  padding: 2rem 3rem;
 }
 
 .license__logo {
-  width: 18rem;
+  width: 13rem;
 }
 
 .license__text {
@@ -318,13 +318,21 @@ html {
 
 .speakers__cards-container {
   padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
 }
 
+.speakers__cards-container > div:last-child{
+  margin-bottom: 3rem;
+}
+
+
 .speakers__card__name {
-  font-size: 2rem;
+  font-size: 1.9rem;
   font-weight: 700;
   color: var(--black);
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .speakers__card__studies {
@@ -554,6 +562,7 @@ html {
   .speakers__cards-container {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     gap: 1rem;
     width: 95%;
@@ -605,16 +614,13 @@ html {
     width: 50rem;
   }
 
-  .footer {
-    display: none;
-  }
+}
 
-  .license {
-    background-color: var(--dark-gray);
-    color: #fff;
-  }
+.change-colors {
+  background-color: var(--dark-gray);
+  color: #fff;
+}
 
-  .license__logo {
-    filter: invert(100%);
-  }
+.change-colors__logo {
+  filter: invert(100%);
 }
